--- a/partbaseout.tex
+++ b/partbaseout.tex
@@ -1,4 +1,4 @@
-\section*{Experiment 1 }
+\section*{Experiment --NUMBER-- }
 
 
 \vspace{20px}
@@ -17,7 +17,7 @@ Write a Program to find roots of a quadratic eqn
 
 \end{lstlisting}
 \subsection{Output}
-\includegraphics[scale=0.5]{--OUTPUT.png--}
+\includegraphics[scale=0.5]{--OUTPUT--.png}
 %use output here if output is imagg else include in main code
 
 \newpage
