--- a/tex/baseout.tex
+++ b/tex/baseout.tex
@@ -44,7 +44,7 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 \lhead{}
 \chead{}
 \rhead{}
-\lfoot{\textbf{--TITLE--} }
+\lfoot{\textbf{C Lab Experiments} }
 \cfoot{}
 \rfoot{Page \thepage}
 \renewcommand{\headrulewidth}{0pt}
@@ -98,9 +98,9 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 	\vspace*{2.5cm}
 	\fontsize{14pt}{14pt} \selectfont{--NAME--}\\
 	\vspace{0.2cm}
-	\fontsize{14pt}{14pt} \selectfont{S3 CSE Roll No:..}\\
+	\fontsize{14pt}{14pt} \selectfont{S3 CSE Roll No:6}\\
 	\vspace*{0.2cm}
-	\fontsize{14pt}{14pt} \selectfont{TVE19CS..}\\
+	\fontsize{14pt}{14pt} \selectfont{TVE19CS006}\\
 	\vspace*{2cm}
 	\fontsize{18pt}{1cm}\selectfont {Department Of Computer Science}\\
 	\vspace{0.5cm}
@@ -110,17 +110,17 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 
 \includegraphics[width=0.5in]{images/cet emblem 1.jpg}
 \hfill
-  \textbf{ \huge{\underline{--TITLE--}}}
+  \textbf{ \huge{\underline{CSL 201-Data Structures Lab - Cycle 2 }}}
 
 \section{Experiment --NUMBER-- }
 
 \subsection{Aim}
---AIM--
+Write a Program to find roots of a quadratic eqn
 
 \subsection{Algorithm}
 \hline 
 \vspace{0.1cm}
-\hspace{0.2 cm}Algorithm --NUMBER--:--AIM--
+\hspace{0.2 cm}Algorithm --NUMBER--:Binary Search Tree Operations
 \vspace{0.1cm}
 \hline
 \begin{verbatim}
@@ -130,11 +130,24 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 
 \subsection{Code}
 \begin{lstlisting}[label={list:first}]
---CODE--
+#include <stdio.h>
+int main() {    
+
+    int number1, number2, sum;
+    
+    printf("Enter two integers: ");
+    scanf("%d %d", &number1, &number2);
+
+    // calculating sum
+    sum = number1 + number2;      
+    
+    printf("%d + %d = %d\n", number1, number2, sum);
+    return 0;
+}
 \end{lstlisting}
 
 \subsection{Sample output}
-\includegraphics[scale=0.5]{pics/--OUTPUT--.png}
+\includegraphics[scale=0.5]{--OUTPUT--.png}
 %use output here if output is imagg else include in main code
 
 \newpage
